--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ nsclc-adj-chemo.Rproj
 clinical_variables_heatmap_updated.png
 Clinical Variables - RAW - Feb. 5.csv
 clinical-variable-heatmap.py
+Included Raw Clinical Variables.csv
