--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@ Included Raw Clinical Variables.csv
 yes.pub
 yes
 .RDataTmp
+GSE14814/GSE14814_RAW.tar
+GSE31210/GSE31210_RAW.tar
+GSE31908/GSE31908_RAW.tar
+GSE37745/GSE37745_RAW.tar
+GSE68465/GSE68465_RAW.tar
