--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,61 @@ GSE37745/GSE37745_RAW.tar
 GSE68465/GSE68465_RAW.tar
 rsf/.env
 .env
+affyFilteredValidation.csv
+affyFilteredTrain.csv
+affyFilteredTest.csv
+affy.merged.raw.csv
+affy.expr.raw.csv
+affy.expr.raw.csv
+affy.merged.raw.csv
+affyFilteredTest.csv
+affyFilteredTrain.csv
+affyFilteredValidation.csv
+affymetrix.expr.csv
+affymetrix.merged.filtered.csv
+affyTest.csv
+affyValidation.csv
+all.expr.csv
+all.merged.csv
+allTest.csv
+allTrain.csv
+allValidation.csv
+GPL570expr.csv
+GPL570merged.csv
+GPL570test.csv
+GPL570train.csv
+GPL570validation.csv
+GPL96expr.csv
+GPL96merged.csv
+GPL96test.csv
+GPL96train.csv
+GPL96validation.csv
+GSE14814expr.csv
+GSE14814merged.csv
+GSE29013expr.csv
+GSE29013merged.csv
+GSE29013rma.csv
+GSE31210expr.csv
+GSE31210merged.csv
+GSE31908expr.csv
+GSE31908merged.csv
+GSE31908rma.csv
+GSE37745expr.csv
+GSE37745merged.csv
+GSE42127expr.csv
+GSE42127merged.csv
+GSE42425_expr.csv
+GSE42425merged.csv
+GSE47115_expr.csv
+GSE47115merged.csv
+GSE50081expr.csv
+GSE50081merged.csv
+GSE63384_expr.csv
+GSE63384merged.csv
+GSE68465expr.csv
+GSE68465merged.csv
+GSE68465rma.csv
+illumina.expr.csv
+illumina.merged.csv
+test_merged.csv
+train_merged.csv
