--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@ illumina.expr.csv
 illumina.merged.csv
 test_merged.csv
 train_merged.csv
+rsf_interactions_iptw_bounded-11-22-1SE/rsf_final.joblib
